Version 1.1.0-CVS (?? ??? 2005)
 - Patch 1163497: Add RSS feed
 - Patch 1171807: reminder sent late if cron run at exact second of reminder
Version 1.0.0 (17 May 2005) aka "Buster"
 - Fixed bug 1202127: [ 1187734 ] Timezone offset problems still exist.
 - Fixed bug 1201821: Bypass user_sees_only_his_groups
 - Undo bug fix 1120897: Conflict with exceptions. This patch caused conflicts 
   on other days which turns out to be a more severe problem.
 - Fixed bug 1193835: Creator cannot "edit" a nonuser-event after Admin changes it.
 - Fixed bug 1193579: Untimed shows up wrong in edit page
 - Fixed several undefined variable messages with Repeat events in
   import_palmdesktop.php. Limited delete_palm_events() to only palm type imports
 - Fixed undefined variable notice in import_handler.php
 - Fixed bug 1189515: Possible to create blank usernames
 - Fixed bug 1190687: users.php called as public
 - Fixed bug 1190699: export.php available to public
 - Fixed bug 1190704: public can access assistant_edit.php
 - Fixed bug 1103215: Invalid work hours
 - Split import/export back to two separate links & pages
 - Moved contents of scheduling tab to details tab
 - Fixed bug 1187734: Timezone offset problem
 - Fixed bug 1120897: Conflict with exceptions
 - Moved function add_duration() to functions.php
 - Fixed problem with ical import weekly BYDAY parsing in import_ical.php
 - Fixed bug 1181682: Report with no name entered -> phantom report!
 - Fixed bug 1179423: private events displayed on reports
 - Fixed bug 1183714: Translation error
 - Fixed bug 1154432: vCal import from Mozilla fails to translate quoted-printable
 - Don't import events if they have in invalid start time (Fixed bug 1176164)
 - When viewing a report, if allow_html_description is enabled but no HTML
   is found in an event description, use nl2br to preserve plain text
   formatting.
 - Fixed bug 1181682: Reports with just spaces for a name cannot be edited.