@@ -21,7 +21,7 @@
 #
 #
 #
-# Translation last updated on 03-06-2005
+# Translation last updated on 05-20-2005
 
 
 ###############################################
@@ -190,6 +190,8 @@ reports-enabled-help: If enabled, users will see a "Reports" section at the bott
 Reports enabled: Reports enabled
 subscriptions-enabled-help: Specifies if remote users can subscribe to a WebCalendar user's calendar, allowing them to see the WebCalendar user's events in their iCal-enabled application (such as Apple's iCal or Mozilla Calendar).
 Allow remote subscriptions: Allow remote subscriptions
+rss-enabled-help: Specifies if a user's calendar can be obtained from a RSS feed.
+Enable RSS feed: Enable RSS feed
 categories-enabled-help: Enables support for event categories.
 Categories enabled: Categories enabled
 allow-external-users-help: Specifies whether a non-calendar user can be added to an event.  This allows non-calendar users to be listed as event participants.
@@ -214,9 +216,7 @@ Events removed from my calendar: Events removed from my calendar
 email-event-rejected: Specifies whether or not to send email notifications when a participant rejects an event that is on your calendar.
 Event rejected by participant: Event rejected by participant
 Allow user to customize colors: Allow user to customize colors
-user-customize-color: Specifies whether users are allowed to modify their own color scheme.
 Enable gradient images for background colors: Enable gradient images for background colors
-enable-gradient-help: Use gradient colors for cell backgrounds.
 Not available: Not available
 Document background: Document background
 Select: Select
@@ -321,8 +321,9 @@ You can only create one layer for each user: You can only create one layer for e
 Deleting users not supported: Deleting users not supported
 The passwords were not identical: The passwords were not identical
 You have not entered a password: You have not entered a password
-Changes successfully saved: Changes successfully saved
 Username can not be blank: Username can not be blank
+Changes successfully saved: Changes successfully saved
+
 
 ###############################################
 # Page: subscription.php
@@ -335,6 +336,7 @@ Unnamed Event: Unnamed Event
 ###############################################
 # Page: export.php
 #
+Export: Export
 Export format: Export format
 Palm Pilot: Palm Pilot
 Include all layers: Include all layers
@@ -342,7 +344,6 @@ Export all dates: Export all dates
 Start date: Start date
 End date: End date
 Modified since: Modified since
-Export: Export
 
 
 ###############################################
@@ -373,38 +374,6 @@ You must specify a group name: You must specify a group name
 # Page: groups.php
 #
 Add New Group: Add New Group
-
-
-###############################################
-# Page: pref.php
-#
-Preferences: Preferences
-Save Preferences: Save Preferences
-to modify the preferences for the Public Access calendar: to modify the preferences for the Public Access calendar
-tz-help: Specifies how many hours to adjust the time from server time to local time.
-Timezone Offset: Timezone Offset
-Add N hours to: Add N hours to
-Subtract N hours from: Subtract N hours from
-same as: same as
-server time: server time
-Default Category: Default Category
-All: All
-When I am the boss: When I am the boss
-Email me event notification: Email me event notification
-email-boss-notifications-help: Specifies if bosses receive emails as event notifications.
-I want to approve events: I want to approve events
-boss-approve-event-help: Specifies whether the boss will be required to approve events added by assistants.
-Subscribe/Publish: Subscribe/Publish
-allow-remote-subscriptions-help: Specifies if remote users can subscribe to your calendar, allowing them to see your events in a iCal-enabled application (such as Apple's iCal or Mozilla Calendar).
-remote-subscriptions-url-help: Displays the URL remote users should use to subscribe to your calendar.
-URL: URL
-Sun: Sun
-Mon: Mon
-Tue: Tue
-Wed: Wed
-Thu: Thu
-Fri: Fri
-Sat: Sat
 
 
 ###############################################
@@ -447,6 +416,7 @@ repeat-frequency-help: Specifies how often the event should repeat.  The default
 Help Index: Help Index
 Layers: Layers
 Import: Import
+Preferences: Preferences
 
 
 ###############################################
@@ -469,8 +439,60 @@ Press the Enable Layers link in the admin section at the bottom of the page to t
 #
 Display days with events in bold in year view: Display days with events in bold in year view
 Nonuser: Nonuser Calendars
-Reports: Reports
+user-customize-color: Specifies whether users are allowed to modify their own color scheme.
+enable-gradient-help: Use gradient colors for cell backgrounds.
 Manually entering color values: Manually entering color values
+
+
+###############################################
+# Page: adminhome.php
+#
+Account: Account
+Assistants: Assistants
+Views: Views
+Reports: Reports
+Delete Events: Delete Events
+Public Preferences: Public Preferences
+Unapproved Public Events: Unapproved Public Events
+Administrative Tools: Administrative Tools
+
+
+###############################################
+# Page: month.php
+#
+Sun: Sun
+Mon: Mon
+Tue: Tue
+Wed: Wed
+Thu: Thu
+Fri: Fri
+Sat: Sat
+
+
+###############################################
+# Page: pref.php
+#
+Save Preferences: Save Preferences
+to modify the preferences for the Public Access calendar: to modify the preferences for the Public Access calendar
+tz-help: Specifies how many hours to adjust the time from server time to local time.
+Timezone Offset: Timezone Offset
+Add N hours to: Add N hours to
+Subtract N hours from: Subtract N hours from
+same as: same as
+server time: server time
+Default Category: Default Category
+All: All
+When I am the boss: When I am the boss
+Email me event notification: Email me event notification
+I want to approve events: I want to approve events
+Subscribe/Publish: Subscribe/Publish
+allow-remote-subscriptions-help: Specifies if remote users can subscribe to your calendar, allowing them to see your events in a iCal-enabled application (such as Apple's iCal or Mozilla Calendar).
+remote-subscriptions-url-help: Displays the URL remote users should use to subscribe to your calendar.
+URL: URL
+rss-feed-url-help: The URL to access the RSS feed
+freebusy-enabled-help: Specifies if a user's available time can be obtained using the iCal FreeBusy standard.
+Enable FreeBusy publishing: Enable FreeBusy publishing
+freebusy-url-help: The URL for accessing the user's FreeBusy list
 
 
 ###############################################
@@ -551,6 +573,12 @@ Export this entry to: Export this entry to
 
 
 ###############################################
+# Page: view_v.php
+#
+No users for this view: No users for this view
+
+
+###############################################
 # Page: reject_entry.php
 #
 An appointment has been rejected by: An appointment has been rejected by
@@ -586,7 +614,6 @@ Go: Go
 ###############################################
 # Page: users.php
 #
-Account: Account
 Add New User: Add New User
 denotes administrative user: denotes administrative user
 
@@ -625,7 +652,6 @@ cookies-note: <b>Note:</b> This application requires cookies to be enabled.
 ###############################################
 # Page: views.php
 #
-Views: Views
 Add New View: Add New View
 
 
@@ -665,6 +691,8 @@ word characters only: can only contain word characters (a-zA-Z_0-9)
 # Page: help_pref.php
 #
 default-category-help: Specifies the category a new event should default to.
+email-boss-notifications-help: Specifies if bosses receive emails as event notifications.
+boss-approve-event-help: Specifies whether the boss will be required to approve events added by assistants.
 
 
 ###############################################
@@ -672,9 +700,11 @@ default-category-help: Specifies the category a new event should default to.
 #
 Untimed event: Untimed event
 Private: Private
+This event is confidential: This event is confidential
 Approved: Approved
 Unknown: Unknown
 to manage reports for the Public Access calendar: to manage reports for the Public Access calendar
+Unnamed Report: Unnamed Report
 Add new report: Add new report
 Invalid report id: Invalid report id
 Manage Reports: Manage Reports
@@ -684,12 +714,6 @@ Manage Reports: Manage Reports
 # Page: views_edit_handler.php
 #
 You must specify a view name: You must specify a view name
-
-
-###############################################
-# Page: view_l.php, veiw_m.php, view_d.php, view_t.php, view_v.php, view_w.php
-#
-No users for this view: No users for this view
 
 
 ###############################################
@@ -717,34 +741,6 @@ Event Imported: Event Imported
 
 
 ###############################################
-# Page: edit_entry.php
-#
-Edit Entry: Edit Entry
-Add Entry: Add Entry
-Details: Details
-Scheduling: Scheduling
-Repeat: Repeat
-category-help: Specifies the category of the event.
-Timed event: Timed event
-Availability: Availability
-external-participants-help: Specifies a list of participants for the event that are not calendar users.  The users should be listed one per line and can include an email address.  If an email address is specified, the user is eligible to receive notications and reminders.
-External Participants: External Participants
-Daily: Daily
-Weekly: Weekly
-Monthly: Monthly
-by day: by day
-by day (from end): by day (from end)
-Yearly: Yearly
-Use end date: Use end date
-Tuesday: Tuesday
-Wednesday: Wednesday
-Thursday: Thursday
-Friday: Friday
-Saturday: Saturday
-You are not authorized to edit this entry: You are not authorized to edit this entry
-
-
-###############################################
 # Page: edit_report.php
 #
 Tomorrow: Tomorrow
@@ -767,7 +763,6 @@ Next year: Next year
 This year: This year
 Last year: Last year
 Year before last: Year before last
-Unnamed Report: Unnamed Report
 Add Report: Add Report
 Edit Report: Edit Report
 Report name: Report name
@@ -787,17 +782,7 @@ Are you sure you want to delete this report?: Are you sure you want to delete th
 ###############################################
 # Page: assistant_edit.php
 #
-Assistants: Assistants
 Your assistants: Your assistants
-
-
-###############################################
-# Page: adminhome.php
-#
-Delete Events: Delete Events
-Public Preferences: Public Preferences
-Unapproved Public Events: Unapproved Public Events
-Administrative Tools: Administrative Tools
 
 
 ###############################################
@@ -885,13 +870,40 @@ Edit Custom Trailer: Edit Custom Trailer
 
 
 ###############################################
+# Page: edit_entry.php
+#
+Edit Entry: Edit Entry
+Add Entry: Add Entry
+Details: Details
+Repeat: Repeat
+category-help: Specifies the category of the event.
+Timed event: Timed event
+Availability: Availability
+external-participants-help: Specifies a list of participants for the event that are not calendar users.  The users should be listed one per line and can include an email address.  If an email address is specified, the user is eligible to receive notications and reminders.
+External Participants: External Participants
+Daily: Daily
+Weekly: Weekly
+Monthly: Monthly
+by day: by day
+by day (from end): by day (from end)
+Yearly: Yearly
+Use end date: Use end date
+Tuesday: Tuesday
+Wednesday: Wednesday
+Thursday: Thursday
+Friday: Friday
+Saturday: Saturday
+You are not authorized to edit this entry: You are not authorized to edit this entry
+
+
+###############################################
 # Page: includes/trailer.php
 #
-Go to: Go to
 My Calendar: My Calendar
 Back to My Calendar: Back to My Calendar
 Another User's Calendar: Another User's Calendar
 Add New Entry: Add New Entry
+Go to: Go to
 Logout: Logout
 Manage calendar of: Manage calendar of
 
@@ -947,7 +959,6 @@ Turkish: Turkish
 ###############################################
 # Page: includes/functions.php
 #
-This event is confidential: This event is confidential
 exceeds limit of XXX events per day: exceeds limit of XXX events per day
 You have XXX unapproved events: You have XXX unapproved events
 January: January
